code refactoring, update Dockerfile and use final version for test